--- a/app/src/main/res/layout/activity_exercise.xml
+++ b/app/src/main/res/layout/activity_exercise.xml
@@ -31,6 +31,7 @@
         <RadioGroup
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:id="@+id/radChoice"
             android:layout_gravity="center_horizontal">
 
             <RadioButton
@@ -62,6 +63,7 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:onClick="clickAnswer"
         android:text="Answer"
         android:id="@+id/button3"
         android:layout_alignParentBottom="true" />
